--- a/.github/workflows/pytest-allure-gosuslugi29.yml
+++ b/.github/workflows/pytest-allure-gosuslugi29.yml
@@ -48,13 +48,15 @@ jobs:
     - name: Build test report
       uses: simple-elf/allure-report-action@v1.9
       if: always()
+      id: allure-report
       with:
         gh_pages: gh-pages
         allure_history: allure-history
         allure_results: allure-results
+        allure_report: allure-report
 
     - name: Publish test report
-      uses: peaceiris/actions-gh-pages@v3
+      uses: peaceiris/actions-gh-pages@v4
       if: always()
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
