--- a/.github/workflows/pytest-allure-gosuslugi29.yml
+++ b/.github/workflows/pytest-allure-gosuslugi29.yml
@@ -36,7 +36,7 @@ jobs:
       continue-on-error: true
     - name: Test with pytest
       run: |
-        pytest --tb=line
+        pytest --tb=line --alluredir=allure-results
     - name: Load test report history
       uses: actions/checkout@v3
       if: always()
