--- a/.github/workflows/pytest-allure-gosuslugi29.yml
+++ b/.github/workflows/pytest-allure-gosuslugi29.yml
@@ -38,7 +38,7 @@ jobs:
       continue-on-error: true
     - name: Test with pytest
       run: |
-        pytest --tb=line --alluredir=allure-results
+        pytest --tb=line --alluredir=allure-results asyncio_mode=auto
     - name: Load test report history
       uses: actions/checkout@v3
       if: always()
