--- a/.github/workflows/pytest-allure-gosuslugi29.yml
+++ b/.github/workflows/pytest-allure-gosuslugi29.yml
@@ -38,7 +38,7 @@ jobs:
       continue-on-error: true
     - name: Test with pytest
       run: |
-        pytest -v --alluredir=allure-results 
+        pytest -v --durations --alluredir=allure-results 
     - name: Load test report history
       uses: actions/checkout@v3
       if: always()
